# platform.upstream.fontconfig

./: .gbs.conf  .gitignore  COPYING  ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  configure.in  fontconfig-2.10.0.tar.bz2.delta  fontconfig-2.10.0.tar.bz2.id  fontconfig-2.10.2.tar.bz2.delta  fontconfig-2.10.2.tar.bz2.id  fontconfig-2.10.91.tar.bz2.delta  fontconfig-2.10.91.tar.bz2.id  fontconfig-2.11.93.tar.gz.delta  fontconfig-2.11.93.tar.gz.id  fontconfig.spec  fonts.conf.in
TC/: _export_env.sh  tetexec.cfg
conf.d/: 60-latin.conf  65-nonlatin.conf  Makefile.in
debian/: changelog  control  copyright  fontconfig-config.install  fontconfig-config.install.in  fontconfig.install  fontconfig.install.in  libfontconfig1-dev.install  libfontconfig1-dev.install.in  libfontconfig1.install  libfontconfig1.install.in  rules
doc/: FcAtomicCreate.3  FcAtomicDeleteNew.3  FcAtomicDestroy.3  FcAtomicLock.3  FcAtomicNewFile.3  FcAtomicOrigFile.3  FcAtomicReplaceOrig.3  FcAtomicUnlock.3  FcBlanksAdd.3  FcBlanksCreate.3  FcBlanksDestroy.3  FcBlanksIsMember.3  FcCacheCopySet.3  FcCacheCreateTagFile.3  FcCacheDir.3  FcCacheNumFont.3  FcCacheNumSubdir.3  FcCacheSubdir.3  FcCharSetAddChar.3  FcCharSetCopy.3  FcCharSetCount.3  FcCharSetCoverage.3  FcCharSetCreate.3  FcCharSetDelChar.3  FcCharSetDestroy.3  FcCharSetEqual.3  FcCharSetFirstPage.3  FcCharSetHasChar.3  FcCharSetIntersect.3  FcCharSetIntersectCount.3  FcCharSetIsSubset.3  FcCharSetMerge.3  FcCharSetNew.3  FcCharSetNextPage.3  FcCharSetSubtract.3  FcCharSetUnion.3  (+167 more)
test/: Makefile.am  Makefile.in  run-test.sh
(+231 files in other folders)
